--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "application-name",
+  "name": "msva-helium",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -8,6 +8,8 @@
   "dependencies": {
     "express": "3.3.7",
     "jade": "*",
-    "less-middleware": "*"
+    "less-middleware": "*",
+    "mongoose": "*",
+    "connect-mongo": "*"
   }
 }
