--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "jade": "*",
     "less-middleware": "*",
     "mongoose": "*",
-    "connect-mongo": "*"
+    "connect-mongo": "*",
+    "passport-local-mongoose": "*",
+    "passport-local": "*",
+    "passport": "*"
   }
 }
