--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "less-middleware": "*",
     "mongoose": "*",
     "connect-mongo": "*",
+    "connect-flash": "*",
     "passport-local-mongoose": "*",
     "passport-local": "*",
     "passport": "*"
