--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connect-flash": "*",
     "passport-local-mongoose": "*",
     "passport-local": "*",
-    "passport": "*"
+    "passport": "*",
+    "markdown": "*"
   }
 }
